--- a/templates/base.html
+++ b/templates/base.html
@@ -50,6 +50,9 @@
         }  
     </style>
 
+    <!-- Favicon -->
+    <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
+
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
